2015-08-07  Kaz Kylheku  <kaz@kylheku.com>

	C++ upkeep: resolve multiple definitions of fun_k.

	* eval.c (fun_k): Global definition removed.
	(eval_init): Do not initialize fun_k here.

	* filter.c (fun_k): Definition removed.
	(filter_init): Do not initialize fun_k.

	* filter.h (fun_k): Declaration removed.

	* lib.c (fun_k): Defined in this file now.
	(obj_init): Initialize fun_k here.

	* lib.h (fun_k): Declare here.

2015-08-07  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (SRCS): When top_srcdir is blank, elide the entire
	--work-tree argument to git. On Cygwin, git throws a strange error
	message when --work-tree is given a blank argument.

2015-08-07  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c: Include <wctype.h> header for iswprint.
	Needed on Cygwin.

2015-08-07  Kaz Kylheku  <kaz@kylheku.com>

	* sysif.c (w_lstat): If we don't have S_IFLINK, implement
	w_lstat as an alias to w_stat. This helps build on MinGW.

2015-08-07  Kaz Kylheku  <kaz@kylheku.com>

	Change to different exception for debugger quit.

	* debug.c (debug_quit_s): New global variable.
	(debug): Throw debug-quit, not query-error.
	(debug_init): Initialize debug_quit_s.

2015-08-06  Kaz Kylheku  <kaz@kylheku.com>

	* debug.c (help): Rearrange menu. Show missing quit command.

2015-08-06  Kaz Kylheku  <kaz@kylheku.com>

	Suppress debug stepping into auto-loaded library code.

	* debug.c (debug_set_state, debug_restore_state): New functions.

	* debug.h (debug_state_t): New type.
	(debug_set_state, debug_restore_state): Declared, and defined
	as dummy macros in non-debug-support build.

	* lisplib.c (opt_dbg_autoload): New global variable.
	(lisplib_try_load): Disable or enable debugging around
	library loading based on opt_dbg_autoload option.

	* lisplib.h (opt_dbg_autoload): Declared.

	* txr.c (help): List --debug-autoload option.
	(no_dbg_support): New static function to avoid repeated code.
	(txr_main): Add debugger-autoload option. Change duplicate no debug